--- a/src/app/views/welcome/dashboad-default/dashboad-default.component.html
+++ b/src/app/views/welcome/dashboad-default/dashboad-default.component.html
@@ -16,7 +16,7 @@
                 <div class="nk-block-head-content text-center">
                     <h2 class="nk-block-title fw-normal">Bonjour, {{username()}}</h2>
                     <div class="nk-block-des">
-                        <p>Bienvenue sur notre plateforme <strong>IKAWARI</strong>. plus que quelques etapes pour completer votre profile. Ceux-ci sont nécessaires pour acheter, vendre, envoyer et recevoir sur notre plateforme! Commençons!</p>
+                        <p>Bienvenue sur notre plateforme <strong>LIFA</strong>. plus que quelques etapes pour completer votre profile. Ceux-ci sont nécessaires pour acheter, vendre, envoyer et recevoir sur notre plateforme! Commençons!</p>
                     </div>
                 </div>
             </div><!-- .nk-block-head -->
@@ -83,7 +83,7 @@
                                         <ul class="list list-sm list-checked">
                                             <li>Monnaie fiduciaire Wallet <span>(XOF, USD, EUR, GBP)</span></li>
                                             <li>10+ Portefeuille Crypto Numérique <span>(ETH, BTC, LTC etc)</span></li>
-                                            <li>Recevoir et envoyer des paiements avec IKAWARI</li>
+                                            <li>Recevoir et envoyer des paiements avec LIFA</li>
                                         </ul>
                                         <a href="html/crypto/index.html" class="btn btn-lg btn-primary">Commençons</a>
                                     </div>
