--- a/src/assets/styles/app/_app.scss
+++ b/src/assets/styles/app/_app.scss
@@ -18,7 +18,7 @@
 @import "../iconsmind/iconsmind.css";
 @import 'variables';
 
-@import 'themes/lite-blue';
+@import 'themes/lite-lifa';
 //@import 'themes/lite-purple';
 @import '../vendor/bootstrap/bootstrap.scss';
 @import "bootstrap-rtl.scss";
