--- a/src/assets/styles/app/themes/_lite-lifa.scss
+++ b/src/assets/styles/app/themes/_lite-lifa.scss
@@ -1,15 +1,14 @@
-$blue:    #263db5 !default;
+$blue:    #2f47c2 !default;
 $indigo:  #6610f2 !default;
 $purple:  #663399 !default;
 $pink:    #e83e8c !default;
-$red:     #d22346 !default;
+$red:     #df0029 !default;
 $orange:  #e97d23 !default;
-$yellow:  #FFC107 !default;
+$yellow:  #ffb822 !default;
 $green:   #4CAF50 !default;
 $teal:    #20c997 !default;
 $cyan:    #9C27B0 !default;
 
-//$primary-base: $purple;
 $primary-base: $orange;
 
 $white:    #fff !default;
