--- a/src/app/views/accounts/wallets/wallets.component.html
+++ b/src/app/views/accounts/wallets/wallets.component.html
@@ -1,34 +1,15 @@
+<div class="breadcrumb">
+    <h1>Accounts</h1>
+    <ul>
+      <li><a href="">accounts</a></li>
+      <li>wallets</li>
+    </ul>
+</div>
+
 <!-- content @s -->
 <div class="nk-content nk-content-fluid">
     <div class="container-xl wide-lg">
         <div class="nk-content-body">
-
-            <div class="nk-block-head">
-                <div class="nk-block-head-sub"><span>Wallet</span> </div><!-- .nk-block-head-sub -->
-                <div class="nk-block-between-md g-4">
-                    <div class="nk-block-head-content">
-                        <h2 class="nk-block-title fw-normal">Wallet / Assets</h2>
-                        <div class="nk-block-des">
-                            <p>Here is the list of your assets / wallets!</p>
-                        </div>
-                    </div>
-                    <div class="nk-block-head-content">
-                        <ul class="nk-block-tools gx-3">
-                            <li class="opt-menu-md dropdown">
-                                <a href="#" class="btn btn-dim btn-outline-light btn-icon" data-toggle="dropdown"><em class="icon ni ni-setting"></em></a>
-                                <div class="dropdown-menu  dropdown-menu-xs dropdown-menu-right">
-                                    <ul class="link-list-plain sm">
-                                        <li><a href="#">Display</a></li>
-                                        <li><a href="#">Show</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li><a href="#" class="btn btn-primary"><span>Send</span> <em class="icon ni ni-arrow-long-right"></em></a></li>
-                            <li><a href="#" class="btn btn-dim btn-outline-light"><span>Withdraw</span> <em class="icon ni ni-arrow-long-right"></em></a></li>
-                        </ul>
-                    </div>
-                </div><!-- .nk-block-between -->
-            </div><!-- .nk-block-head -->
             <div class="nk-block nk-block-lg">
                 <div class="nk-block-head-sm">
                     <div class="nk-block-head-content">
@@ -36,7 +17,8 @@
                     </div>
                 </div>
                 <div class="row g-gs">
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6 col-lg-4"
+                    *ngFor="let item of wallets" >
                         <div class="card card-bordered">
                             <div class="nk-wgw">
                                 <div class="nk-wgw-inner">
@@ -44,17 +26,15 @@
                                         <div class="nk-wgw-icon is-default">
                                             <em class="icon ni ni-sign-usd"></em>
                                         </div>
-                                        <h5 class="nk-wgw-title title">CFA Account</h5>
+                                        <h5 class="nk-wgw-title title">{{item.type}}</h5>
                                     </a>
                                     <div class="nk-wgw-balance">
-                                        <div class="amount">0<span class="currency currency-usd">CFA</span></div>
-                                        <div class="amount-sm">0<span class="currency currency-usd">CFA</span></div>
+                                        <div class="amount">{{item.balance}}<span class="currency currency-usd">{{item.currency}}</span></div>
                                     </div>
                                 </div>
                                 <div class="nk-wgw-actions">
                                     <ul>
                                         <li><a href="#"><em class="icon ni ni-arrow-up-right"></em> <span>Envoyer</span></a></li>
-                                        <li><a href="#"><em class="icon ni ni-arrow-down-left"></em><span>Recevoir</span></a></li>
                                         <li><a href="#"><em class="icon ni ni-arrow-to-right"></em><span>Retrait</span></a></li>
                                     </ul>
                                 </div>
@@ -97,6 +77,7 @@
                     </div>
                 </div>
                 <div class="row g-gs">
+                    <!--
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-bordered">
                             <div class="nk-wgw">
@@ -115,7 +96,6 @@
                                 <div class="nk-wgw-actions">
                                     <ul>
                                         <li><a href="#"><em class="icon ni ni-arrow-up-right"></em> <span>Send</span></a></li>
-                                        <li><a href="#"><em class="icon ni ni-arrow-down-left"></em><span>Receive</span></a></li>
                                         <li><a href="#"><em class="icon ni ni-arrow-to-right"></em><span>Withdraw</span></a></li>
                                     </ul>
                                 </div>
@@ -131,8 +111,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div><!-- .card -->
-                    </div><!-- .col -->
+                        </div>
+                    </div> 
+                    -->
                     
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-bordered dashed h-100">
