--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,11 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+/* Mandatory */
+@import '~ng-wizard/themes/ng_wizard.min.css';
+
+/* Optional */
+/* If a theme other than default is used, the css file for that theme is required. */
+@import '~ng-wizard/themes/ng_wizard_theme_arrows.min.css';
+//@import '~ng-wizard/themes/ng_wizard_theme_circles.min.css';
+//@import '~ng-wizard/themes/ng_wizard_theme_dots.min.css';
